--- a/HQproj-master/app/src/main/AndroidManifest.xml
+++ b/HQproj-master/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.HQproj">
 
@@ -21,7 +21,8 @@
             android:exported="true">
         </service>
 
-        <activity android:name=".Activity.MusicActivity">
+        <activity android:name=".Activity.MusicActivity"
+            android:launchMode="standard">
         </activity>
 
         <activity android:name=".Activity.RegActivity"
