--- a/HQproj-master/app/src/main/AndroidManifest.xml
+++ b/HQproj-master/app/src/main/AndroidManifest.xml
@@ -22,18 +22,21 @@
         </service>
 
         <activity android:name=".Activity.MusicActivity"
-            android:launchMode="standard">
+            android:launchMode="singleTask"
+            android:exported="true">
         </activity>
 
-        <activity android:name=".Activity.RegActivity"
-            android:launchMode="singleTask">
+        <activity android:name=".Activity.RegActivity">
         </activity>
 
-        <activity android:name=".Activity.LoginActivity"
-            android:launchMode="singleTask">
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:configChanges="locale"
+            android:theme="@style/ColorTranslucentTheme">
         </activity>
 
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name=".Activity.MainActivity"
+            android:theme="@style/splashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
